--- a/src/app/components/healthchecks/healthchecks.component.html
+++ b/src/app/components/healthchecks/healthchecks.component.html
@@ -19,9 +19,7 @@
 <mat-accordion class="healthcheck-headers-align">
   <mat-expansion-panel disabled>
     <mat-expansion-panel-header>
-      <mat-panel-title>
-        Healthy
-      </mat-panel-title>
+      <mat-panel-title> Healthy </mat-panel-title>
       <mat-panel-description>
         Scheduler status
         @if (schedulerHealth.Healthy) {
@@ -47,8 +45,7 @@
           }
         </mat-panel-description>
       </mat-expansion-panel-header>
-      <p> {{ healthCheck.DiagnosisMessage }} </p>
+      <p>{{ healthCheck.DiagnosisMessage }}</p>
     </mat-expansion-panel>
   }
 </mat-accordion>
-
