--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -21,7 +21,10 @@
     <div class="dropdown-wrapper">
       <label class="dropdown-label">Partition: </label>
       <mat-form-field>
-        <mat-select [(value)]="partitionSelected" (selectionChange)="onPartitionSelectionChanged($event)">
+        <mat-select
+          [(value)]="partitionSelected"
+          (selectionChange)="onPartitionSelectionChanged($event)"
+        >
           <mat-option *ngFor="let part of partitionList" [value]="part.value">
             {{ part.name }}
           </mat-option>
@@ -31,7 +34,11 @@
     <div class="dropdown-wrapper">
       <label class="dropdown-label">Queue: </label>
       <mat-form-field>
-        <mat-select [(value)]="leafQueueSelected" (selectionChange)="onQueueSelectionChanged($event)" #queueSelect>
+        <mat-select
+          [(value)]="leafQueueSelected"
+          (selectionChange)="onQueueSelectionChanged($event)"
+          #queueSelect
+        >
           <mat-option *ngFor="let queue of leafQueueList" [value]="queue.value">
             {{ queue.name }}
           </mat-option>
@@ -41,16 +48,33 @@
   </div>
   <div class="right-side">
     <mat-form-field class="search-wrapper white-mat-form-field">
-      <input matInput type="text" [(ngModel)]="searchText" placeholder="Search By Application ID" #searchInput />
-      <button class="clear-btn" *ngIf="searchText" (click)="onClearSearch()" matTooltip="Clear Search"
-              matTooltipShowDelay="500">
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="searchText"
+        placeholder="Search By Application ID"
+        #searchInput
+      />
+      <button
+        class="clear-btn"
+        *ngIf="searchText"
+        (click)="onClearSearch()"
+        matTooltip="Clear Search"
+        matTooltipShowDelay="500"
+      >
         <i class="far fa-times-circle"></i>
       </button>
       <i *ngIf="!searchText" class="fas fa-search search-icon"></i>
     </mat-form-field>
     <div class="btn-wrapper">
-      <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
-        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
+      <button
+        class="btn"
+        (click)="toggle()"
+        [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'"
+      >
+        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54'"
+          >more_horiz</i
+        >
       </button>
     </div>
   </div>
@@ -66,21 +90,27 @@
         </ng-container>
 
         <ng-container *ngIf="columnDef.colId === 'lastStateChangeTime'; else renderNext_1">
-          <mat-cell *matCellDef="let element">{{ element['formattedlastStateChangeTime'] }}</mat-cell>
+          <mat-cell *matCellDef="let element">{{
+            element['formattedlastStateChangeTime']
+          }}</mat-cell>
         </ng-container>
 
         <ng-template #renderNext_1>
           <ng-container
-            *ngIf="columnDef.colId === 'usedResource' || columnDef.colId === 'pendingResource'; else renderNext_1">
+            *ngIf="
+              columnDef.colId === 'usedResource' || columnDef.colId === 'pendingResource';
+              else renderNext_1
+            "
+          >
             <mat-cell *matCellDef="let element">
               <ng-container *ngIf="columnDef.colFormatter; else showAppRawData">
                 <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
                   <ul class="mat-res-ul">
                     <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                      <li class="mat-res-li" *ngIf="i<2">
+                      <li class="mat-res-li" *ngIf="i < 2">
                         {{ resource }}
                       </li>
-                      <li class="mat-res-li" *ngIf="i>=2 && detailToggle">
+                      <li class="mat-res-li" *ngIf="i >= 2 && detailToggle">
                         {{ resource }}
                       </li>
                     </ng-container>
@@ -125,54 +155,87 @@
 
       <mat-header-row *matHeaderRowDef="appColumnIds"></mat-header-row>
 
-      <mat-row *matRowDef="let row; columns: appColumnIds" [class.selected-row]="selectedRow === row"
-               (click)="toggleRowSelection(row)"></mat-row>
+      <mat-row
+        *matRowDef="let row; columns: appColumnIds"
+        [class.selected-row]="selectedRow === row"
+        (click)="toggleRowSelection(row)"
+      ></mat-row>
 
-      <mat-footer-row *matFooterRowDef="['noRecord']"
-                      [ngStyle]="{ display: isAppDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
+      <mat-footer-row
+        *matFooterRowDef="['noRecord']"
+        [ngStyle]="{ display: isAppDataSourceEmpty() ? '' : 'none' }"
+      ></mat-footer-row>
     </mat-table>
 
-    <mat-paginator #appsViewMatPaginator [pageSizeOptions]="[10, 20, 50, 100]"
-                   [ngStyle]="{ display: isAppDataSourceEmpty() ? 'none' : '' }" (page)="onPaginatorChanged()"
-                   showFirstLastButtons></mat-paginator>
+    <mat-paginator
+      #appsViewMatPaginator
+      [pageSizeOptions]="[10, 20, 50, 100]"
+      [ngStyle]="{ display: isAppDataSourceEmpty() ? 'none' : '' }"
+      (page)="onPaginatorChanged()"
+      showFirstLastButtons
+    ></mat-paginator>
   </div>
 
-  <mat-drawer-container
-    class="flex-primary"
-    [hasBackdrop]="false"
-  >
+  <mat-drawer-container class="flex-primary" [hasBackdrop]="false">
     <mat-drawer #matDrawer mode="over" position="end">
       <mat-drawer-content>
         <div class="header">
-          <span>{{ selectedRow?.applicationId }} ({{ selectedRow?.allocations?.length }} allocations)</span>
-          <span class="far fa-clipboard copy-btn" (click)="copyLinkToClipboard()" matTooltip="Click to copy the URL to this view" matTooltipShowDelay="500"></span>
+          <span
+            >{{ selectedRow?.applicationId }} ({{
+              selectedRow?.allocations?.length
+            }}
+            allocations)</span
+          >
+          <span
+            class="far fa-clipboard copy-btn"
+            (click)="copyLinkToClipboard()"
+            matTooltip="Click to copy the URL to this view"
+            matTooltipShowDelay="500"
+          ></span>
           <span class="far fa-solid fa-xmark close-btn" (click)="closeDrawer()"></span>
         </div>
         <div class="content">
-
           <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
             <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
-              <mat-header-cell *matHeaderCellDef mat-sort-header [style.flex]="columnDef?.colWidth || 1">{{ columnDef.colName }}</mat-header-cell>
+              <mat-header-cell
+                *matHeaderCellDef
+                mat-sort-header
+                [style.flex]="columnDef?.colWidth || 1"
+                >{{ columnDef.colName }}</mat-header-cell
+              >
 
-              <ng-container *ngIf="columnDef.colId === 'priority'; else renderNext_3" >
-                <mat-cell class="small" *matCellDef="let element"
-                          [style.flex]="columnDef?.colWidth || 1"
-                          [style.min-height]="allocationsToggle ? '96px' : 'unset'"
-                          [title]="element[columnDef.colId]"
-                >{{ element['priority'] }}  </mat-cell>
+              <ng-container *ngIf="columnDef.colId === 'priority'; else renderNext_3">
+                <mat-cell
+                  class="small"
+                  *matCellDef="let element"
+                  [style.flex]="columnDef?.colWidth || 1"
+                  [style.min-height]="allocationsToggle ? '96px' : 'unset'"
+                  [title]="element[columnDef.colId]"
+                  >{{ element['priority'] }}
+                </mat-cell>
               </ng-container>
 
               <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_3">
-                <mat-cell *matCellDef="let element" class="allocations-data" [style.flex]="columnDef?.colWidth || 1" matTooltip="
-                          {{element[columnDef.colId]}}" matTooltipShowDelay="500" >
-                  <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData;">
-                    <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                <mat-cell
+                  *matCellDef="let element"
+                  class="allocations-data"
+                  [style.flex]="columnDef?.colWidth || 1"
+                  matTooltip="
+                          {{ element[columnDef.colId] }}"
+                  matTooltipShowDelay="500"
+                >
+                  <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
+                    <ng-container
+                      *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue"
+                    >
                       <ul class="mat-res-ul">
-                        <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
-                          <li class="mat-res-li" *ngIf="i<1">
+                        <ng-container
+                          *ngFor="let resource of formatResources(colValue); let i = index"
+                        >
+                          <li class="mat-res-li" *ngIf="i < 1">
                             {{ resource }}
                           </li>
-                          <li class="mat-res-li" *ngIf="i>=1 && allocationsToggle">
+                          <li class="mat-res-li" *ngIf="i >= 1 && allocationsToggle">
                             {{ resource }}
                           </li>
                         </ng-container>
@@ -186,12 +249,15 @@
               </ng-container>
 
               <ng-template #renderNext_3>
-                <mat-cell *matCellDef="let element"
-                          [class]="allocationsToggle ? '' : 'ellipsis'"
-                          [style.flex]="columnDef?.colWidth || 1"
-                          [style.min-height]="allocationsToggle ? '96px' : 'unset'"
-                          matTooltip="{{element[columnDef.colId]}}" matTooltipShowDelay="500"
-                >{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
+                <mat-cell
+                  *matCellDef="let element"
+                  [class]="allocationsToggle ? '' : 'ellipsis'"
+                  [style.flex]="columnDef?.colWidth || 1"
+                  [style.min-height]="allocationsToggle ? '96px' : 'unset'"
+                  matTooltip="{{ element[columnDef.colId] }}"
+                  matTooltipShowDelay="500"
+                  >{{ element[columnDef.colId] || 'n/a' }}</mat-cell
+                >
               </ng-template>
             </ng-container>
 
@@ -203,18 +269,24 @@
 
             <mat-header-row *matHeaderRowDef="allocColumnIds"></mat-header-row>
 
-            <mat-row *matRowDef="let row; columns: allocColumnIds; let i = index" (click)="allocationsDetailToggle()"
-                     [ngClass]="{'even-row': i % 2 === 0, 'row': true}"
+            <mat-row
+              *matRowDef="let row; columns: allocColumnIds; let i = index"
+              (click)="allocationsDetailToggle()"
+              [ngClass]="{ 'even-row': i % 2 === 0, row: true }"
             ></mat-row>
 
-            <mat-footer-row *matFooterRowDef="['noRecord']"
-                            [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
+            <mat-footer-row
+              *matFooterRowDef="['noRecord']"
+              [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"
+            ></mat-footer-row>
           </mat-table>
 
-          <mat-paginator #allocationMatPaginator [pageSizeOptions]="[10, 20, 50, 100]"
-                         [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
-                         showFirstLastButtons></mat-paginator>
-
+          <mat-paginator
+            #allocationMatPaginator
+            [pageSizeOptions]="[10, 20, 50, 100]"
+            [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
+            showFirstLastButtons
+          ></mat-paginator>
         </div>
       </mat-drawer-content>
     </mat-drawer>
