--- a/src/app/components/licenses-modal/licenses-modal.component.scss
+++ b/src/app/components/licenses-modal/licenses-modal.component.scss
@@ -26,7 +26,7 @@
     position: sticky;
     top: 0;
     z-index: 1;
-    color: rgb(51,51,51);
+    color: rgb(51, 51, 51);
   }
 
   .modal-body {
