--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -23,7 +23,7 @@
       <mat-select
         [(value)]="partitionSelected"
         (selectionChange)="onPartitionSelectionChanged($event)"
-        >
+      >
         @for (part of partitionList; track part) {
           <mat-option [value]="part.value">
             {{ part.name }}
@@ -36,38 +36,50 @@
   <div class="right-wrapper">
     <div class="filter">
       <mat-form-field>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input />
       </mat-form-field>
     </div>
 
     <div class="btn-wrapper">
-      <button class="btn" (click)="toggle()" [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'">
-        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54' ">more_horiz</i>
+      <button
+        class="btn"
+        (click)="toggle()"
+        [style.background-color]="detailToggle ? '#313d54' : '#f5f5f5'"
+      >
+        <i class="material-icons __icon" [style.color]="detailToggle ? '#f5f5f5' : '#313d54'"
+          >more_horiz</i
+        >
       </button>
     </div>
   </div>
-
 </div>
 <div class="nodes-view">
   <div class="mat-elevation-z8">
     <mat-table [dataSource]="nodeDataSource" matSort #nodeSort="matSort">
       @for (columnDef of nodeColumnDef; track columnDef) {
         <ng-container [matColumnDef]="columnDef.colId">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>{{
+            columnDef.colName
+          }}</mat-header-cell>
           @if (
-            ['capacity', 'occupied', 'allocated', 'available', 'utilized'].includes(columnDef.colId)) {
+            ['capacity', 'occupied', 'allocated', 'available', 'utilized'].includes(columnDef.colId)
+          ) {
             <mat-cell *matCellDef="let element">
               @if (columnDef.colFormatter) {
                 @if (columnDef.colFormatter(element[columnDef.colId]); as colValue) {
                   <ul class="mat-res-ul">
                     @for (resource of formatResources(colValue); track resource; let i = $index) {
-                      @if (i<2) {
-                        <li class="mat-res-li"
-                        [innerHTML]="resource | highlightSearch: filterValue"></li>
+                      @if (i < 2) {
+                        <li
+                          class="mat-res-li"
+                          [innerHTML]="resource | highlightSearch: filterValue"
+                        ></li>
                       }
-                      @if (i>=2 && detailToggle) {
-                        <li class="mat-res-li"
-                        [innerHTML]="resource | highlightSearch: filterValue"></li>
+                      @if (i >= 2 && detailToggle) {
+                        <li
+                          class="mat-res-li"
+                          [innerHTML]="resource | highlightSearch: filterValue"
+                        ></li>
                       }
                     }
                   </ul>
@@ -77,16 +89,25 @@
               }
             </mat-cell>
           } @else {
-            @if (columnDef.colId!=='attributes') {
+            @if (columnDef.colId !== 'attributes') {
               <mat-cell *matCellDef="let element">
-                <span [innerHTML]="element[columnDef.colId] || 'n/a' | highlightSearch: filterValue"></span>
+                <span
+                  [innerHTML]="element[columnDef.colId] || 'n/a' | highlightSearch: filterValue"
+                ></span>
               </mat-cell>
             }
-            @if (columnDef.colId=='attributes') {
+            @if (columnDef.colId == 'attributes') {
               <mat-cell *matCellDef="let element" class="mat-attr">
                 <ul class="mat-attr-ul">
-                  @for (attribute of formatAttribute(element[columnDef.colId]); track attribute; let i = $index) {
-                    <li class="mat-attr-li" [innerHTML]="attribute | highlightSearch: filterValue"></li>
+                  @for (
+                    attribute of formatAttribute(element[columnDef.colId]);
+                    track attribute;
+                    let i = $index
+                  ) {
+                    <li
+                      class="mat-attr-li"
+                      [innerHTML]="attribute | highlightSearch: filterValue"
+                    ></li>
                   }
                 </ul>
               </mat-cell>
@@ -146,21 +167,23 @@
       <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
         @for (columnDef of allocColumnDef; track columnDef) {
           <ng-container [matColumnDef]="columnDef.colId">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnDef.colName }}</mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>{{
+              columnDef.colName
+            }}</mat-header-cell>
             @if (columnDef.colId === 'resource') {
               <mat-cell *matCellDef="let element">
                 @if (columnDef.colFormatter) {
                   @if (columnDef.colFormatter(element[columnDef.colId]); as colValue) {
                     <ul class="mat-res-ul">
                       @for (resource of formatResources(colValue); track resource; let i = $index) {
-                        @if (i<2) {
+                        @if (i < 2) {
                           <li class="mat-res-li">
-                            {{resource}}
+                            {{ resource }}
                           </li>
                         }
-                        @if (i>=2 && detailToggle) {
+                        @if (i >= 2 && detailToggle) {
                           <li class="mat-res-li">
-                            {{resource}}
+                            {{ resource }}
                           </li>
                         }
                       }
