[YUNIKORN-2828] Restore lower table view for allocations in the Applications page

--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -176,119 +176,78 @@
     ></mat-paginator>
   </div>
 
-  <mat-drawer-container class="flex-primary" [hasBackdrop]="false">
-    <mat-drawer #matDrawer mode="over" position="end">
-      <mat-drawer-content>
-        <div class="header">
-          <span
-            >{{ selectedRow?.applicationId }} ({{
-              selectedRow?.allocations?.length
-            }}
-            allocations)</span
-          >
-          <span
-            class="far fa-clipboard copy-btn"
-            (click)="copyLinkToClipboard()"
-            matTooltip="Click to copy the URL to this view"
-            matTooltipShowDelay="500"
-          ></span>
-          <span class="far fa-solid fa-xmark close-btn" (click)="closeDrawer()"></span>
-        </div>
-        <div class="content">
-          <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
-            <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
-              <mat-header-cell
-                *matHeaderCellDef
-                mat-sort-header
-                [style.flex]="columnDef?.colWidth || 1"
-                >{{ columnDef.colName }}</mat-header-cell
-              >
+  <div class="app-allocations" [ngStyle]="{ display: selectedRow ? '' : 'none' }">
+    <div>
+      <span>{{ selectedRow?.applicationId }} ({{ selectedRow?.allocations?.length }} allocations)</span>
+      <span class="far fa-clipboard copy-btn" (click)="copyLinkToClipboard()" matTooltip="Click to copy the URL to this view" matTooltipShowDelay="500"></span>
+    </div>
 
-              <ng-container *ngIf="columnDef.colId === 'priority'; else renderNext_3">
-                <mat-cell
-                  class="small"
-                  *matCellDef="let element"
-                  [style.flex]="columnDef?.colWidth || 1"
-                  [style.min-height]="allocationsToggle ? '96px' : 'unset'"
-                  [title]="element[columnDef.colId]"
-                  >{{ element['priority'] }}
-                </mat-cell>
-              </ng-container>
+    <mat-divider></mat-divider>
 
-              <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_3">
-                <mat-cell
-                  *matCellDef="let element"
-                  class="allocations-data"
-                  [style.flex]="columnDef?.colWidth || 1"
-                  matTooltip="
-                          {{ element[columnDef.colId] }}"
-                  matTooltipShowDelay="500"
-                >
-                  <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData">
-                    <ng-container
-                      *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue"
-                    >
-                      <ul class="mat-res-ul">
-                        <ng-container
-                          *ngFor="let resource of formatResources(colValue); let i = index"
-                        >
-                          <li class="mat-res-li" *ngIf="i < 1">
-                            {{ resource }}
-                          </li>
-                          <li class="mat-res-li" *ngIf="i >= 1 && allocationsToggle">
-                            {{ resource }}
-                          </li>
-                        </ng-container>
-                      </ul>
+    <div class="mat-elevation-z8">
+      <mat-table [dataSource]="allocDataSource" matSort #allocSort="matSort">
+        <ng-container [matColumnDef]="columnDef.colId" *ngFor="let columnDef of allocColumnDef">
+          <mat-header-cell *matHeaderCellDef mat-sort-header [style.flex]="columnDef?.colWidth || 1">{{ columnDef.colName }}</mat-header-cell>
+
+          <ng-container *ngIf="columnDef.colId === 'priority'; else renderNext_3" >
+            <mat-cell class="small" *matCellDef="let element"
+                      [style.flex]="columnDef?.colWidth || 1"
+                      [style.min-height]="allocationsToggle ? '96px' : 'unset'"
+                      [title]="element[columnDef.colId]"
+            >{{ element['priority'] }}  </mat-cell>
+          </ng-container>
+
+          <ng-container *ngIf="columnDef.colId === 'resource'; else renderNext_3">
+            <mat-cell *matCellDef="let element" class="allocations-data" [style.flex]="columnDef?.colWidth || 1" matTooltip="
+                      {{element[columnDef.colId]}}" matTooltipShowDelay="500" >
+              <ng-container *ngIf="columnDef.colFormatter; else showAllocRowData;">
+                <ng-container *ngIf="columnDef.colFormatter(element[columnDef.colId]) as colValue">
+                  <ul class="mat-res-ul">
+                    <ng-container *ngFor="let resource of formatResources(colValue); let i = index">
+                      <li class="mat-res-li" *ngIf="i<1">
+                        {{ resource }}
+                      </li>
+                      <li class="mat-res-li" *ngIf="i>=1 && allocationsToggle">
+                        {{ resource }}
+                      </li>
                     </ng-container>
-                  </ng-container>
-                  <ng-template #showAllocRowData>
-                    <span>{{ element[columnDef.colId] }}</span>
-                  </ng-template>
-                </mat-cell>
+                  </ul>
+                </ng-container>
               </ng-container>
-
-              <ng-template #renderNext_3>
-                <mat-cell
-                  *matCellDef="let element"
-                  [class]="allocationsToggle ? '' : 'ellipsis'"
-                  [style.flex]="columnDef?.colWidth || 1"
-                  [style.min-height]="allocationsToggle ? '96px' : 'unset'"
-                  matTooltip="{{ element[columnDef.colId] }}"
-                  matTooltipShowDelay="500"
-                  >{{ element[columnDef.colId] || 'n/a' }}</mat-cell
-                >
+              <ng-template #showAllocRowData>
+                <span>{{ element[columnDef.colId] }}</span>
               </ng-template>
-            </ng-container>
+            </mat-cell>
+          </ng-container>
 
-            <ng-container matColumnDef="noRecord">
-              <mat-footer-cell *matFooterCellDef>
-                <div class="no-record">No records found</div>
-              </mat-footer-cell>
-            </ng-container>
+          <ng-template #renderNext_3>
+            <mat-cell *matCellDef="let element"
+                      [style.flex]="columnDef?.colWidth || 1"
+                      [style.min-height]="allocationsToggle ? '96px' : 'unset'"
+                      matTooltip="{{element[columnDef.colId]}}" matTooltipShowDelay="500"
+            >{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
+          </ng-template>
+        </ng-container>
 
-            <mat-header-row *matHeaderRowDef="allocColumnIds"></mat-header-row>
+        <ng-container matColumnDef="noRecord">
+          <mat-footer-cell *matFooterCellDef>
+            <div class="no-record">No records found</div>
+          </mat-footer-cell>
+        </ng-container>
 
-            <mat-row
-              *matRowDef="let row; columns: allocColumnIds; let i = index"
-              (click)="allocationsDetailToggle()"
-              [ngClass]="{ 'even-row': i % 2 === 0, row: true }"
-            ></mat-row>
+        <mat-header-row *matHeaderRowDef="allocColumnIds"></mat-header-row>
 
-            <mat-footer-row
-              *matFooterRowDef="['noRecord']"
-              [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"
-            ></mat-footer-row>
-          </mat-table>
+        <mat-row *matRowDef="let row; columns: allocColumnIds" (click)="allocationsDetailToggle()"
+        ></mat-row>
 
-          <mat-paginator
-            #allocationMatPaginator
-            [pageSizeOptions]="[10, 20, 50, 100]"
-            [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
-            showFirstLastButtons
-          ></mat-paginator>
-        </div>
-      </mat-drawer-content>
-    </mat-drawer>
-  </mat-drawer-container>
+        <mat-footer-row *matFooterRowDef="['noRecord']"
+                        [ngStyle]="{ display: isAllocDataSourceEmpty() ? '' : 'none' }"></mat-footer-row>
+      </mat-table>
+
+      <mat-paginator #allocationMatPaginator [pageSizeOptions]="[10, 20, 50, 100]"
+                      [ngStyle]="{ display: isAllocDataSourceEmpty() ? 'none' : '' }"
+                      showFirstLastButtons></mat-paginator>
+
+    </div>
+  </div>
 </div>
